<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.me74.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/titel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chemistry"
            />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />


        <!-- Question Group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question_1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <CheckBox
            android:id="@+id/anwser_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_5"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_6"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />


        <!-- Question Group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question_2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <CheckBox
            android:id="@+id/anwser_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_7"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_8"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/anwser_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_9"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_10"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_11"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/anwser_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/answer_12"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />


        <!-- Question Group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question_3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/anwser_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_13"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_14"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />


        <!-- Question Group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question_4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/anwser_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_15"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_16"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_17"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_18"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />


        <!-- Question Group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question_5"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <EditText
            android:id="@+id/freetext_answer_input_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/free_text_answer_hint_1"
            android:paddingBottom="@dimen/activity_vertical_margin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />


        <!-- Question Group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question_6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/anwser_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_19"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_20"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_21"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/anwser_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/answer_22"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>


        <!-- Score display group -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/score_title"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/score_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/show_score"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devider_line_width"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark" />


        <!-- Submit to score calculation button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
